--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "dependencies": {
     "react-icons": "^5.5.0",
+    "react-router": "^7.5.3",
+    "react-router-dom": "^7.5.3",
     "styled-components": "^6.1.17"
   }
 }
